--- a/MedbayTech.APIGateways/MedbayTech.APIGateways.csproj
+++ b/MedbayTech.APIGateways/MedbayTech.APIGateways.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.10" />
     <PackageReference Include="Ocelot" Version="16.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
 </Project>
