--- a/WebApplicationFrontend/package.json
+++ b/WebApplicationFrontend/package.json
@@ -21,9 +21,9 @@
     "@angular/platform-browser": "~10.2.0",
     "@angular/platform-browser-dynamic": "~10.2.0",
     "@angular/router": "~10.2.0",
-    "angular-bootstrap-md": "^10.1.1",
     "angular-responsive-carousel": "^2.0.2",
-    "bootstrap": "^5.0.0-beta1",
+    "bootstrap": "^4.5.3",
+    "ng-image-slider": "^2.6.4",
     "ngx-toastr": "^13.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
