--- a/Dockerfile.WebAppIntegrationTests
+++ b/Dockerfile.WebAppIntegrationTests
@@ -3,16 +3,9 @@ WORKDIR /app
 
 COPY Backend/Backend.csproj Backend/
 COPY WebApplication/WebApplication.csproj WebApplication/
-COPY WebApplicationIntegrationTests/WebApplicationIntegrationTests.csproj WebApplicationIntegrationTests/
+COPY MedbayTech.WebIntegrationTests/MedbayTech.WebIntegrationTests.csproj MedbayTech.WebIntegrationTests/
 
-RUN dotnet restore WebApplicationIntegrationTests/WebApplicationIntegrationTests.csproj
-
-
-RUN apt-get update && apt-get upgrade -y && apt-get install -y nodejs npm
-RUN npm install npm@latest -g
-RUN npm install -g npm
-RUN npm install
-
+RUN dotnet restore MedbayTech.WebIntegrationTests/MedbayTech.WebIntegrationTests.csproj
 COPY . .
 
 FROM build AS publish
@@ -24,5 +17,5 @@ RUN dotnet ef migrations add Init
 FROM build AS test
 LABEL test=true
 
-WORKDIR /app/WebApplicationIntegrationTests
+WORKDIR /app/MedbayTech.WebIntegrationTests
 CMD ["dotnet", "test"]
