--- a/docker-compose.ph.yml
+++ b/docker-compose.ph.yml
@@ -23,7 +23,7 @@ services:
       - postgres-data:/var/lib/postgres
 
   PhIntegrationTests:
-      image: ph_tests
+      image: stefan7/test2
       container_name: ph_integration_tests
       restart: on-failure
       depends_on:
