--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -30,7 +30,7 @@ services:
     depends_on:
       - postgres
       - feedback
-      # - pharmacies
+      - pharmacies
       - medications
       - users 
       - rooms 
@@ -73,28 +73,32 @@ services:
     volumes:
       - postgres-data:/var/lib/postgres:rw
 
-  # pharmacies:
-  #   image: pharmacies
-  #   container_name: pharmacies_container
-  #   restart: on-failure
-  #   networks:
-  #     - demo
-  #   depends_on:
-  #     - postgres
-  #   environment:
-  #     DATABASE_USERNAME: "user"
-  #     DATABASE_PASSWORD: "user"
-  #     DATABASE_HOST: "postgres"
-  #     DATABASE_TYPE: "postgres"
-  #     DATABASE_SCHEMA: "mydb1"
-  #     STAGE: "test"
-  #     PORT: "5005"
-  #     PORT_MEDICATION: "5007"
-  #     URL_MEDICATION: "users"
-  #   ports:
-  #     - "50202:5005"
-  #   volumes:
-  #     - postgres-data:/var/lib/postgres:rw
+  pharmacies:
+    image: pharmacies
+    container_name: pharmacies_container
+    restart: on-failure
+    networks:
+      - demo
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_USERNAME: "user"
+      DATABASE_PASSWORD: "user"
+      DATABASE_HOST: "postgres"
+      DATABASE_TYPE: "postgres"
+      DATABASE_SCHEMA: "mydb1"
+      STAGE: "test"
+      PORT: "50202"
+      # PORT_MEDICATION: "5007"
+      # URL_MEDICATION: "users"
+      # PORT_USERS: "5002"
+      # URL_USERS: "users"
+      PORT_DOCUMENTS: "5006"
+      URL_DOCUMENTS: "patientdocuments"
+    ports:
+      - "50202:50202"
+    volumes:
+      - postgres-data:/var/lib/postgres:rw
 
   medications:
     image: medications
