--- a/MedbayTech.PharmacyIntegration/MedbayTech.Pharmacies.csproj
+++ b/MedbayTech.PharmacyIntegration/MedbayTech.Pharmacies.csproj
@@ -36,6 +36,7 @@
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
     <PackageReference Include="SSH.NET" Version="2016.1.0" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
+    <PackageReference Include="System.ServiceModel.Syndication" Version="4.6.0" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="5.0.0" />
     <PackageReference Include="VueCliMiddleware" Version="3.1.2" />
   </ItemGroup>
