--- a/WebApplicationFrontend/package.json
+++ b/WebApplicationFrontend/package.json
@@ -23,6 +23,8 @@
     "@angular/router": "~10.2.0",
     "angular-responsive-carousel": "^2.0.2",
     "bootstrap": "^4.5.3",
+    "html2canvas": "^1.0.0-rc.7",
+    "jspdf": "^2.2.0",
     "ng-image-slider": "^2.6.4",
     "ngx-toastr": "^13.1.0",
     "popper.js": "^1.16.1",
