:tada: Implemented sending mails to pharmacy

--- a/MedbayTech.Pharmacies/appsettings.json
+++ b/MedbayTech.Pharmacies/appsettings.json
@@ -6,6 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-    "AllowedHosts": "*"
-
+  "AllowedHosts": "*",
+  "MailSettings": {
+    "Mail": "medbaytech@gmail.com",
+    "DisplayName": "MedbayTech",
+    "Password": "medbaytech123",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  }
 }
