--- a/MedbayTech.Pharmacies/MedbayTech.Pharmacies.csproj
+++ b/MedbayTech.Pharmacies/MedbayTech.Pharmacies.csproj
@@ -51,5 +51,9 @@
   <ItemGroup>
     <ProjectReference Include="..\MedbayTech.Common\MedbayTech.Common.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Infrastructure\Database\Configurations\" />
+  </ItemGroup>
 
 </Project>
