--- a/MedbayTech.PharmacyIntegrationTests/MedbayTech.PharmacyIntegrationTests.csproj
+++ b/MedbayTech.PharmacyIntegrationTests/MedbayTech.PharmacyIntegrationTests.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Backend\Backend.csproj" />
+    <ProjectReference Include="..\MedbayTech.Medications\MedbayTech.Medications.csproj" />
     <ProjectReference Include="..\MedbayTech.Pharmacies\MedbayTech.Pharmacies.csproj" />
 
   </ItemGroup>
