--- a/MedbayTech.UnitTesting/MedbayTech.UnitTesting.csproj
+++ b/MedbayTech.UnitTesting/MedbayTech.UnitTesting.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MedbayTech.Appointment\MedbayTech.Appointment.csproj" />
     <ProjectReference Include="..\MedbayTech.Feedback\MedbayTech.Feedback.csproj" />
+    <ProjectReference Include="..\MedbayTech.Medications\MedbayTech.Medications.csproj" />
     <ProjectReference Include="..\MedbayTech.PatientDocuments\MedbayTech.PatientDocuments.csproj" />
     <ProjectReference Include="..\MedbayTech.Pharmacies\MedbayTech.Pharmacies.csproj" />
     <ProjectReference Include="..\MedbayTech.Rooms\MedbayTech.Rooms.csproj" />
