Refactored Medication out of Pharmacies ms (#104)
* :wrench:Fully removed Medications from Pharmacies ms

* :poop:Fixed test and build errors

* :fire: Removed redundant/useless Medication code from MedbayTech.Pharmacies. PH front now references MedbayTech.Medications. Fixed small typos.

--- a/MedbayTech.Pharmacies/MedbayTech.Pharmacies.csproj
+++ b/MedbayTech.Pharmacies/MedbayTech.Pharmacies.csproj
@@ -52,5 +52,9 @@
   <ItemGroup>
     <ProjectReference Include="..\MedbayTech.Common\MedbayTech.Common.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Infrastructure\Database\Configurations\" />
+  </ItemGroup>
 
 </Project>
