:construction: Event sourcing backend and frontend

--- a/WebApplicationFrontend/package.json
+++ b/WebApplicationFrontend/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "~10.2.0",
     "angular-responsive-carousel": "^2.0.2",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
     "ng-image-slider": "^2.6.4",
+    "ng2-charts": "^2.4.2",
     "ngx-toastr": "^13.1.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
