:whale: :twisted_rightwards_arrows: Updated docker compose and merged with new develop

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,7 +75,7 @@ services:
 
 
   pharmacies:
-    image: pharmacy
+    image: stefan7/pharmacies:latest
     container_name: pharmacy_container
     restart: on-failure
     networks:
