--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
       - postgres-data:/var/lib/postgres
 
   apigateway:
-    image: stefan7/apigateways:latest
+    image: stefan7/apigatewaytest:latest
     container_name: api_container
     restart: on-failure
     networks:
@@ -37,6 +37,8 @@ services:
       - patientdocuments
       - appointment
     environment:
+      API_URL: "http://localhost:53843"
+      DEBUG: "true"
       DATABASE_USERNAME: "user"
       DATABASE_PASSWORD: "user"
       DATABASE_HOST: "postgres"
