--- a/WebApplicationFrontend/angular.json
+++ b/WebApplicationFrontend/angular.json
@@ -21,7 +21,9 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/env.js",
+              "src/assets/env.template.js"
             ],
             "styles": [
               "node_modules/ngx-toastr/toastr.css",
@@ -59,6 +61,34 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "test" : {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.test.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
             }
           }
         },
@@ -69,6 +99,9 @@
           },
           "configurations": {
             "production": {
+              "browserTarget": "WebApplicationFrontend:build:production"
+            },
+            "test" : {
               "browserTarget": "WebApplicationFrontend:build:production"
             }
           }
@@ -118,6 +151,9 @@
           },
           "configurations": {
             "production": {
+              "devServerTarget": "WebApplicationFrontend:serve:production"
+            },
+            "test" : {
               "devServerTarget": "WebApplicationFrontend:serve:production"
             }
           }
