--- a/MedbayTech.Tenders/MedbayTech.Tenders.csproj
+++ b/MedbayTech.Tenders/MedbayTech.Tenders.csproj
@@ -6,12 +6,15 @@
 
   <ItemGroup>
     <PackageReference Include="MailKit" Version="2.10.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices" Version="3.1.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.11">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="MimeKit" Version="2.10.1" />
     <PackageReference Include="System.ServiceModel.Syndication" Version="4.6.0" />
+    <PackageReference Include="VueCliMiddleware" Version="3.1.2" />
   </ItemGroup>
 
   <ItemGroup>
