--- a/MedbayTech.PharmacyIntegrationTests/MedbayTech.PharmacyIntegrationTests.csproj
+++ b/MedbayTech.PharmacyIntegrationTests/MedbayTech.PharmacyIntegrationTests.csproj
@@ -31,6 +31,7 @@
     <ProjectReference Include="..\Backend\Backend.csproj" />
     <ProjectReference Include="..\MedbayTech.Medications\MedbayTech.Medications.csproj" />
     <ProjectReference Include="..\MedbayTech.Pharmacies\MedbayTech.Pharmacies.csproj" />
+    <ProjectReference Include="..\MedbayTech.Tenders\MedbayTech.Tenders.csproj" />
 
   </ItemGroup>
 
