--- a/Dockerfile.PhIntegrationTests
+++ b/Dockerfile.PhIntegrationTests
@@ -1,26 +1,17 @@
 FROM mcr.microsoft.com/dotnet/core/sdk:3.1-buster AS build
 WORKDIR /app
 
-COPY Backend/Backend.csproj Backend/
 COPY MedbayTech.Pharmacies/MedbayTech.Pharmacies.csproj MedbayTech.Pharmacies/
+COPY MedbayTech.Tenders/MedbayTech.Tenders.csproj MedbayTech.Tenders/
+COPY MedbayTech.Medications/MedbayTech.Medications.csproj MedbayTech.Medications/
 COPY MedbayTech.PharmacyIntegrationTests/MedbayTech.PharmacyIntegrationTests.csproj MedbayTech.PharmacyIntegrationTests/
 COPY MedbayTech.Common/MedbayTech.Common.csproj MedbayTech.Common/
 
 RUN dotnet restore MedbayTech.PharmacyIntegrationTests/MedbayTech.PharmacyIntegrationTests.csproj
 
-RUN apt-get update && apt-get upgrade -y && apt-get install -y nodejs npm
-RUN npm install npm@latest -g
-RUN npm install -g npm
-RUN npm install
-
 RUN apt-get update && apt-get install -y --allow-unauthenticated libc6-dev libgdiplus libx11-dev && rm -rf /var/lib/apt/lists/*
 
 COPY . .
-
-WORKDIR /app/Backend
-ENV PATH $PATH:/root/.dotnet/tools
-RUN dotnet tool install -g dotnet-ef --version 3.1.9
-RUN dotnet ef migrations add Init
 
 FROM build AS test
 LABEL test=true
