:lipstick: Added toast notifications.

--- a/MedbayTech.Tenders/Properties/launchSettings.json
+++ b/MedbayTech.Tenders/Properties/launchSettings.json
@@ -11,6 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
@@ -18,6 +19,7 @@
     "MedbayTech.Tenders": {
       "commandName": "Project",
       "launchBrowser": true,
+      "launchUrl": "",
       "applicationUrl": "http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
