--- a/MedbayTech.PharmacyUI/package.json
+++ b/MedbayTech.PharmacyUI/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.1.3",
     "vue-router": "^3.4.9",
+    "vue-toast-notification": "^0.6.0",
     "vuetify": "^2.2.11"
   },
   "devDependencies": {
